--- a/cv/curriculo.html
+++ b/cv/curriculo.html
@@ -4,54 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Programação WEB - Currículo</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <style>
-        .span-break {
-            display: block;
-        }
-
-        .font-name {
-            font-size: 5rem;
-            color: #ff9a3c;
-        }
-
-        .body-font {
-            font-size: medium;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .first-color {
-            background: #155263;
-        }
-
-        .first-color-font {
-            color: #155263;
-        }
-
-        .second-color {
-            background: #ff6f3c;
-        }
-
-        .second-color-font {
-            color: #ff6f3c;
-        }
-
-        .third-color {
-            background: #ff9a3c;
-        }
-
-        .fourth-color {
-            background: #ffc93c;
-        }
-
-        .fourth-color-font {
-            color: #ffc93c;
-        }
-    </style>
-
 </head>
 
 <body class="first-color">
@@ -64,17 +20,21 @@
                 <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="cv/curriculo.html">Currículo</a>
+                <a class="nav-link font-nav first-color-font" href="#">Currículo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="#">Contatos</a>
+                <a class="nav-link font-nav first-color-font" href="../contatos/contatos.html">Contatos</a>
             </li>
         </ul>
     </div>
     <div class="container">
-        <div class="row">
-            <h4 class="fourth-color-font">Home > Currículo</h4>
+        <div class="row  mb-4">
+            <div class="col">
+                <a class="fourth-color-font" href="../index.html">Home</a><span class="fourth-color-font"> > </span>
+                <a class="fourth-color-font" href="#">Currículo</a>
+            </div>
         </div>
+
         <div class="row">
             <h1 class="second-color-font">Currículo</h1>
         </div>
@@ -105,13 +65,15 @@
         <div class="row">
             <div class="body-font second-color-font">SOBRE MIM</div>
             <hr style="color:#ff6f3c;" class="border border-danger border-2 opacity-50">
-            <p class="body-font fourth-color-font">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            <p class="body-font fourth-color-font">Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
                 into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
                 release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
                 software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p class="body-font fourth-color-font">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            <p class="body-font fourth-color-font">Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
                 into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
@@ -124,6 +86,12 @@
         <P class="body-font fourth-color-font">Análise e Desenvolvimento de Sistemas - Em Andamento</P>
         <div class="body-font second-color-font">HABILIDADES</div>
         <P class="body-font fourth-color-font">Análise e Desenvolvimento de Sistemas - Em Andamento</P>
+        <P class="body-font fourth-color-font">Laboratório de Engenharia de Software - Em Andamento</P>
+        <P class="body-font fourth-color-font">Laboratório de Banco de Dados - Em Andamento</P>
+        <div class="body-font second-color-font">EXPERIÊNCIA DE TRABALHO</div>
+        <P class="body-font fourth-color-font">Laboratório de Banco de Dados - Em Andamento</P>
+
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
