--- a/index.html
+++ b/index.html
@@ -2,85 +2,51 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <style>
-
-    .span-break {
-      display: block;
-    }
-
-    .font-name {
-      font-size: 5rem;
-      color: #ff9a3c;
-    }
-
-    .first-color {
-      background: #155263;
-    }
-    
-    .first-color-font {
-      color: #155263;
-    }
-    .second-color {
-      background: #ff6f3c;
-    }
-
-    .second-color-font {
-      color: #ff6f3c;
-    }
-
-    .third-color {
-      background: #ff9a3c;
-    }
-
-    .fourth-color {
-      background: #ffc93c;
-    }
-    
-    .fourth-color-font {
-      color: #ffc93c;
-    }
-
-  </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Programação WEB - CV</title>
+    <script src="js/_common.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" media="(max-width: 800px)" href="example.css" />
 
 </head>
 
 <body class="first-color">
-  <div class="container second-color">
-    <ul class="nav justify-content-end font-nav">
-      <li class="nav-item">
-        <a class="nav-link first-color-font" href="#">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link font-nav first-color-font" href="cv/curriculo.html">Currículo</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link font-nav first-color-font" href="#" >Contatos</a>
-      </li>
-    </ul>
-  </div>
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col">
-        <img src="css/imgs/avatar.png" alt="" style="margin-top:4rem;">
-      </div>
-      <div class="col">
-        <h2 class="font-name second-color-font">Teste <span class="span-break fourth-color-font">Teste Teste</span></h2>
-      </div>
+    <div class="container">
+        <div class="nav-transition" id="navbar">
+            <ul class="nav justify-content-end font-nav">
+                <li class="nav-item">
+                    <a class="nav-link first-color-font" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="cv/curriculo.html">Currículo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="contatos/contatos.html">Contatos</a>
+                </li>
+                <li class="nav-link threeline-icon" onclick="myFunction();" id="threeline-icon" >
+                    <a href="#" class="font-nav first-color-font" style="text-decoration: none;">&#9776;</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col">
+                <img src="css/imgs/avatar.png" alt="" class="profile-pic">
+            </div>
+            <div class="col transition-name">
+                <h2 class="font-name second-color-font">Teste <span class="span-break fourth-color-font">Teste
+                        Teste</span></h2>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
