terceiro comentario: adicionado a tela de contatos e responsividade geral

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="nav-item">
                     <a class="nav-link font-nav first-color-font" href="contatos/contatos.html">Contatos</a>
                 </li>
-                <li class="nav-link threeline-icon" onclick="myFunction();" id="threeline-icon" >
+                <li class="nav-link threeline-icon" onclick="myFunction();" id="threeline-icon">
                     <a href="#" class="font-nav first-color-font" style="text-decoration: none;">&#9776;</a>
                 </li>
             </ul>
@@ -38,12 +38,11 @@
     </div>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col">
-                <img src="css/imgs/avatar.png" alt="" class="profile-pic">
+            <div class="col-lg-6 padding-img">
+                <img src="css/imgs/avatar.png" alt="" class=" img-fluid">
             </div>
-            <div class="col transition-name">
-                <h2 class="font-name second-color-font">Teste <span class="span-break fourth-color-font">Teste
-                        Teste</span></h2>
+            <div class="col-lg-6 transition-name">
+                <p class="text-xl-left second-color-font font-name">Programação <span class="span-break fourth-color-font">WEB  </span></p>
             </div>
         </div>
     </div>
