--- a/contatos/contatos.html
+++ b/contatos/contatos.html
@@ -5,27 +5,60 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Programação WEB - Contatos</title>
+    <script src="../js/_common.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
 <body class="first-color">
-    <div class="container second-color">
-        <ul class="nav justify-content-end font-nav">
-            <li class="nav-item">
-                <a class="nav-link first-color-font" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="../cv/curriculo.html">Currículo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="#">Contatos</a>
-            </li>
-        </ul>
+    <div class="container">
+        <div class="nav-transition" id="navbar">
+            <ul class="nav justify-content-end font-nav">
+                <li class="nav-item">
+                    <a class="nav-link first-color-font" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="../cv/curriculo.html">Currículo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="#">Contatos</a>
+                </li>
+                <li class="nav-link threeline-icon" onclick="myFunction();" id="threeline-icon">
+                    <a href="#" class="font-nav first-color-font" style="text-decoration: none;">&#9776;</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row  mb-4">
+            <div class="col">
+                <a class="fourth-color-font" href="../index.html">Home</a><span class="fourth-color-font"> > </span>
+                <a class="fourth-color-font" href="#">Contatos</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <h1 class="second-color-font">Contatos</h1>
+        </div>
+        <hr style="color:#ff6f3c;" class="border border-danger border-2 opacity-50">
+        </hr>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="body-font second-color-font">E-MAIL:</div>
+                    <div class="body-font fourth-color-font mb-4">teste@gmail.com</div>
+                    <div class="body-font second-color-font">TELEFONE:</div>
+                    <div class="body-font fourth-color-font mb-4"><i class="bi bi-whatsapp"></i> (15) 99766-1540</div>
+                    <div class="body-font second-color-font">REDES SOCIAIS:</div>
+                    <div class="body-font fourth-color-font mb-4"><i class="bi bi-facebook"></i>&emsp;<i class="bi bi-instagram"></i>&emsp;<i class="bi bi-linkedin"></i></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
