--- a/cv/curriculo.html
+++ b/cv/curriculo.html
@@ -6,26 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Programação WEB - Currículo</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/_common.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body class="first-color">
-    <div class="container second-color">
-        <ul class="nav justify-content-end font-nav">
-            <li class="nav-item">
-                <a class="nav-link first-color-font" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="#">Currículo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link font-nav first-color-font" href="../contatos/contatos.html">Contatos</a>
-            </li>
-        </ul>
+    <div class="container">
+        <div class="nav-transition" id="navbar">
+            <ul class="nav justify-content-end font-nav">
+                <li class="nav-item">
+                    <a class="nav-link first-color-font" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="#">Currículo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-nav first-color-font" href="../contatos/contatos.html">Contatos</a>
+                </li>
+                <li class="nav-link threeline-icon" onclick="myFunction();" id="threeline-icon">
+                    <a href="#" class="font-nav first-color-font" style="text-decoration: none;">&#9776;</a>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="container">
         <div class="row  mb-4">
