quarto comentário: tela inicial do portifolio

--- a/cv/curriculo.html
+++ b/cv/curriculo.html
@@ -19,7 +19,7 @@
                     <a class="nav-link first-color-font" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
+                    <a class="nav-link font-nav first-color-font" href="../portifolio/portifolio.html">Portifólio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link font-nav first-color-font" href="#">Currículo</a>
