--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link first-color-font" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link font-nav first-color-font" href="#">Portifólio</a>
+                    <a class="nav-link font-nav first-color-font" href="portifolio/portifolio.html">Portifólio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link font-nav first-color-font" href="cv/curriculo.html">Currículo</a>
