criacao das paginas filhas do portifolio

--- a/portifolio/web_page.html
+++ b/portifolio/web_page.html
@@ -47,50 +47,33 @@
         <div class="row  mb-4">
             <div class="col">
                 <a class="fourth-color-font" href="../index.html">Home</a><span class="fourth-color-font"> > </span>
-                <a class="fourth-color-font" href="#">Portifólio</a>
+                <a class="fourth-color-font" href="portifolio.html">Portifólio</a><span class="fourth-color-font"> >
+                </span>
+                <a class="fourth-color-font" href="#">Código</a>
             </div>
         </div>
 
         <div class="row">
-            <h1 class="second-color-font">Portifólio</h1>
+            <h1 class="second-color-font">Código</h1>
         </div>
         <hr style="color:#ff6f3c;" class="border border-danger border-2 opacity-50">
         </hr>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-4">
-                <div class="card" style="border: none;">
-                    <img class="card-img" src="../css/imgs/carousel_slide_01.jpg" alt="Card image">
-                    <div class="overlay">
-                        <h5 class="fourth-color-font">Código</h5>
-                        <p class="second-color-font">Codificação de software é o processo de escrever
-                            instruções para um computador, usando uma linguagem de programação.</p>
-                        <button type="button" class="btn btn-outline-info" onclick="location.href='web_page.html';">Saiba Mais</button>
-                    </div>
-                </div>
+            <div class="col">
+                <img src="../css/imgs/web_image_01.jpg" alt="web_page" class="rounded mx-auto d-block" style="width: 500px;">
             </div>
-            <div class="col-4">
-                <div class="card" style="border: none;">
-                    <img class="card-img" src="../css/imgs/carousel_slide_02.jpg" alt="Card image">
-                    <div class="overlay">
-                        <h5 class="fourth-color-font">Hardware</h5>
-                        <p class="second-color-font">O hardware é responsável pela execução das instruções do software.
-                        </p>
-                        <button type="button" class="btn btn-outline-info"  onclick="location.href='hardware_pages.html';">Saiba Mais</button>
-                    </div>
-                </div>
+            <div class="col">
+                <h5 class="fourth-color-font">Código</h5>
+                <hr style="color:#ff6f3c;" class="border border-danger border-2 opacity-50">
+                <p class="second-color-font">Codificação de software é o processo de escrever
+                    instruções para um computador, usando uma linguagem de programação.</p>
             </div>
-            <div class="col-4">
-                <div class="card" style="border: none;">
-                    <img class="card-img" src="../css/imgs/carousel_slide_03.jpg" alt="Card image">
-                    <div class="overlay">
-                        <h5 class="fourth-color-font">I.A</h5>
-                        <p class="second-color-font">Inteligência artificial (IA) é um campo de estudo da ciência da
-                            computação que se concentra no desenvolvimento de máquinas inteligentes..</p>
-                        <button type="button" class="btn btn-outline-info" onclick="location.href='ia_pages.html';">Saiba Mais</button>
-                    </div>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <a href="portifolio.html" class="fourth-color-font"> < Voltar</a>
             </div>
         </div>
     </div>
